# myy_player

./: .gitignore  Cargo.toml  README.md  README_EN.md  fix_ffmpeg.ps1
examples/: wgpu_demo.rs
src/: main.rs  tauri_wgpu_simple.rs
src/app/: mod.rs
src/core/: clock.rs  error.rs  mod.rs  types.rs
src/player/: audio_output.rs  decoder.rs  demuxer.rs  demuxer_factory.rs  demuxer_source.rs  demuxer_thread.rs  external_subtitle.rs  hw_decoder.rs  manager.rs  mod.rs  network_stream.rs
src/renderer/: egui_video_renderer.rs  mod.rs  shader.rs  wgpu_renderer.rs
wix/: main.wxs
